Solutions to puzzle 3 and 5

--- a/2022/CMakeLists.txt
+++ b/2022/CMakeLists.txt
@@ -4,3 +4,6 @@ project(aoc_2022)
 
 add_subdirectory(puzzle1)
 add_subdirectory(puzzle2)
+add_subdirectory(puzzle3)
+add_subdirectory(puzzle4)
+add_subdirectory(puzzle5)
