Slightly polish puzzle 5
Also build both part 1 and 2 using preprocessor defined

--- a/2022/puzzle5/CMakeLists.txt
+++ b/2022/puzzle5/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_executable(puzzle5 main.cpp)
+add_executable(puzzle5_part1 main.cpp)
+target_compile_definitions(puzzle5_part1 PRIVATE DO_PART1)
+add_executable(puzzle5_part2 main.cpp)
+target_compile_definitions(puzzle5_part2 PRIVATE DO_PART2)
 
 #copy input file to build directory
 configure_file(input.txt input.txt)
