Solution to puzzle 6

--- a/2022/CMakeLists.txt
+++ b/2022/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(puzzle2)
 add_subdirectory(puzzle3)
 add_subdirectory(puzzle4)
 add_subdirectory(puzzle5)
+add_subdirectory(puzzle6)
