Polish puzzle6 code
 - Use the newly added utility header
 - Use push_back and pop_front instead of std::rotate

--- a/2022/puzzle6/CMakeLists.txt
+++ b/2022/puzzle6/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_executable(puzzle6 main.cpp)
+target_include_directories(puzzle6 PRIVATE ../include)
 
 #copy input file to build directory
 configure_file(input.txt input.txt)
