Add OpenMP to CMakeLists
Multithreading is useful in some of the exercises...

--- a/2022/CMakeLists.txt
+++ b/2022/CMakeLists.txt
@@ -4,6 +4,7 @@ project(aoc_2022)
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+find_package(OpenMP REQUIRED)
 
 #Add all subdirectories that satisfy the pattern puzzle\d+
 file(GLOB sources_list LIST_DIRECTORIES true puzzle*)
